--- a/init.org
+++ b/init.org
@@ -53,11 +53,15 @@ Must be in the beginning for ~use-package~ usage below.
 ** General configs
 *** Set the emacs user directory
 #+begin_src elisp
-(setq user-emacs-directory "/Users/g.bozhinov/.emacs.d/")
+(let* ((home-dir (getenv "HOME"))
+     (custom-emacs-directory (concat home-dir "/.emacs.d")))
+  (setq user-emacs-directory custom-emacs-directory))
 #+end_src
 *** Set the default font
 #+begin_src elisp
-(set-default-font "JetBrains Mono 18")
+(if (eq system-type 'gnu/linux)
+  (set-default-font "Jet Brains Mono 18")
+  (set-default-font "JetBrainsMono 18"))
 #+end_src
 *** Set the theme (ok I like the doom emacs themes)
 #+begin_src elisp
@@ -190,7 +194,7 @@ The notes (zettelkasten) god
 
 #+begin_src elisp
 (use-package org-roam
-  :straight (:host github :repo "org-roam/org-roam" :branch master)
+  :straight t
   :hook
   (after-init . org-roam-mode)
   :custom
