--- a/init.org
+++ b/init.org
@@ -61,7 +61,7 @@ Must be in the beginning for ~use-package~ usage below.
 #+begin_src elisp
 (if (eq system-type 'gnu/linux)
   (set-default-font "Jet Brains Mono 18")
-  (set-default-font "JetBrainsMono 18"))
+  (set-default-font "JetBrains Mono 18"))
 #+end_src
 *** Set the theme (ok I like the doom emacs themes)
 #+begin_src elisp
