Some new vars, ox-hugo, emacs 27 migration

--- a/init.org
+++ b/init.org
@@ -7,7 +7,7 @@
 - [[#configure-all-the-emacs][Configure all the Emacs!]]
   - [[#package-manager][Package manager]]
     - [[#bootstrap-code-for-the-package-manager---straightel][Bootstrap code for the package manager - ~straight.el~]]
-    - [[#install-use-package-for-sane-package-configuration][Install ~use-package~ for sane package configuration]]
+    - [[#install-use-package-for-sane-package-configuration][Install use-package for sane package configuration]]
   - [[#general-configs][General configs]]
     - [[#set-the-emacs-user-directory][Set the emacs user directory]]
     - [[#set-the-default-font][Set the default font]]
@@ -19,6 +19,7 @@
   - [[#org-mode][Org-mode]]
     - [[#general][General]]
     - [[#org-roam][Org-roam]]
+    - [[#ox-hugo][Ox-hugo]]
   - [[#magit][Magit]]
   - [[#helm][Helm]]
   - [[#ranger][Ranger]]
@@ -46,7 +47,7 @@ Must be in the beginning for ~use-package~ usage below.
 (load bootstrap-file nil 'nomessage))
 #+end_src
 
-*** Install ~use-package~ for sane package configuration
+*** Install use-package for sane package configuration
 #+begin_src elisp
 (straight-use-package 'use-package)
 #+end_src
@@ -60,8 +61,8 @@ Must be in the beginning for ~use-package~ usage below.
 *** Set the default font
 #+begin_src elisp
 (if (eq system-type 'gnu/linux)
-  (set-default-font "Jet Brains Mono 18")
-  (set-default-font "JetBrains Mono 18"))
+  (set-frame-font "Jet Brains Mono 18")
+  (set-frame-font "JetBrainsMono 18"))
 #+end_src
 *** Set the theme (ok I like the doom emacs themes)
 #+begin_src elisp
@@ -144,41 +145,43 @@ Installing and configuring org-mode:
 
 #+begin_src elisp
 (use-package org
-  :straight t
-  :hook
-  (org-mode . visual-line-mode)
-  :config
-  (require 'org-tempo)
-  (eval-after-load 'org-agenda
+    :straight t
+    :hook
+    (org-mode . visual-line-mode)
+    :config
+    (require 'org-tempo)
+    (eval-after-load 'org-agenda
     '(progn
-       (evil-set-initial-state 'org-agenda-mode 'normal)
-       (evil-define-key 'normal org-agenda-mode-map
-	 "vd" 'org-agenda-day-view
-	 "vw" 'org-agenda-week-view
-         "I"  'org-agenda-clock-in
-         "O"  'org-agenda-clock-out)))
-  (setq org-refile-targets
-	'(("~/Nextcloud/Orgzly/gtd.org" :maxlevel . 3)
-          ("~/Nextcloud/Orgzly/someday.org" :level . 1)
-          ("~/Nextcloud/Orgzly/tickler.org" :maxlevel . 2)))
-  (setq org-capture-templates
-	'(("t" "Todo [inbox]" entry
-         (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
-         "* TODO %i%?")
-         ("T" "Tickler" entry
-         (file+headline "~/Nextcloud/Orgzly/tickler.org" "Tickler")
-         "* TODO %i%? \n SCHEDULED: %T")))
-  (setq org-todo-keywords '((sequence "TODO(t)" "WAITING(w)" "|" "DONE(d)" "CANCELLED(c)")))
-  (setq org-agenda-files
+        (evil-set-initial-state 'org-agenda-mode 'normal)
+        (evil-define-key 'normal org-agenda-mode-map
+            "vd" 'org-agenda-day-view
+            "vw" 'org-agenda-week-view
+            "I"  'org-agenda-clock-in
+            "O"  'org-agenda-clock-out)))
+    (setq org-refile-targets
+        '(("~/Nextcloud/Orgzly/gtd.org" :maxlevel . 3)
+            ("~/Nextcloud/Orgzly/someday.org" :level . 1)
+            ("~/Nextcloud/Orgzly/tickler.org" :maxlevel . 2)))
+    (setq org-capture-templates
+        '(("t" "Todo [inbox]" entry
+            (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
+            "* TODO %i%?")
+            ("T" "Tickler" entry
+            (file+headline "~/Nextcloud/Orgzly/tickler.org" "Tickler")
+            "* TODO %i%? \n SCHEDULED: %T")))
+    (setq org-todo-keywords '((sequence "TODO(t)" "WAITING(w)" "|" "DONE(d)" "CANCELLED(c)")))
+    (setq org-agenda-files
     '("~/Nextcloud/Orgzly/gtd.org"
-      "~/Nextcloud/Orgzly/tickler.org"
-      "~/Nextcloud/Orgzly/inbox.org"
-      "~/Nextcloud/org/work"))
+        "~/Nextcloud/Orgzly/tickler.org"
+        "~/Nextcloud/Orgzly/inbox.org"
+        "~/Nextcloud/org/work"))
 
-  (setq org-startup-indented t)
-  (setq org-startup-folded t)
-  (setq org-indent-mode t)
-  (setq org-log-done 'note))
+    (setq org-startup-indented t)
+    (setq org-startup-folded t)
+    (setq org-indent-mode t)
+    (setq org-log-done 'note)
+    (setq org-tags-column 0)
+    (setq org-agenda-tags-column 0))
 #+end_src
 
 Like org bullets, but supercharged?
@@ -206,6 +209,14 @@ The notes (zettelkasten) god
       :map org-mode-map
       (("C-c n i" . org-roam-insert))
       (("C-c n I" . org-roam-insert-immediate))))
+#+end_src
+*** Ox-hugo
+Export org mode files to Hugo markdown.
+
+#+begin_src elisp
+(use-package ox-hugo
+  :straight t
+  :after ox)
 #+end_src
 ** Magit
 The git supercharge
